[package]
name = "hoard-sys"
version = "0.1.1"
authors = ["paigereeves <paigereeves006@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Rust FFI bindings to Hoard."
repository = "https://github.com/paigereeves/hoard-sys"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.82"

[build-dependencies]
uname = "0.1.1"